chore: add lint-staged and husky for pre-commit hooks, update package.json dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+permissions:
+  contents: read
 name: ci
 
 on:
@@ -10,8 +12,7 @@ jobs:
   web:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Use Node 22
         uses: actions/setup-node@v4
