feat: add testing setup with Vitest and Testing Library
- Updated package.json to include Vitest and Testing Library dependencies
- Created unit tests for Button component (rendering, click handling, disabled state)
- Added tests for Page component (heading, description, room ID input, continue button)
- Set up global testing configuration in setupTests.ts for React and Testing Library
- Configured Vitest with jsdom environment and path aliasing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest --run",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
@@ -29,15 +31,22 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^20.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "lint-staged": "^16.1.5",
+    "msw": "^2.10.5",
     "prettier": "^3.6.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
