--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "typecheck": "tsc --noEmit",
     "prepare": "husky",
     "test": "vitest --run",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "e2e": "playwright test"
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
