--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "framer-motion": "^12.23.12",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
