--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.55.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.7"
   },
@@ -44,6 +48,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/ui": "^3.2.4",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
     "eslint-config-prettier": "^10.1.8",
@@ -51,7 +58,11 @@
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.5",
     "msw": "^2.10.5",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
     "vitest": "^3.2.4"
   }
