--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Create .env.local from repository secrets
+        run: |
+          cat > .env.local <<'EOF'
+          NEXT_PUBLIC_API_BASE=http://localhost:8080
+          NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          EOF
+
       - name: Use Node 22
         uses: actions/setup-node@v4
         with:
@@ -41,6 +49,14 @@ jobs:
     needs: web
     steps:
       - uses: actions/checkout@v4
+
+      - name: Create .env.local from repository secrets
+        run: |
+          cat > .env.local <<'EOF'
+          NEXT_PUBLIC_API_BASE=http://localhost:8080
+          NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          EOF
 
       - name: Use Node 22
         uses: actions/setup-node@v4
