--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "e2e": "playwright test",
-    "e2e:ui": "playwright test --ui"
+    "e2e:ui": "playwright test --ui",
+    "e2e:ci": "playwright test --config=playwright.ci.config.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
