--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,10 @@ jobs:
         run: npm run build
 
   e2e:
-    name: Playwright E2E
+    name: Playwright E2E (CI Optimized)
     runs-on: ubuntu-latest
     needs: web
+    timeout-minutes: 10 # Add timeout to prevent hanging
     steps:
       - uses: actions/checkout@v4
 
@@ -70,8 +71,18 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright E2E
-        run: npm run e2e -- --reporter=html
+      - name: Run Playwright E2E (CI Optimized)
+        run: |
+          echo "=== Playwright CI Configuration Debug ==="
+          echo "Current directory: $(pwd)"
+          echo "Files in current directory:"
+          ls -la
+          echo "Files in test directory:"
+          ls -la src/test/e2e/
+          echo "Using Playwright CI config: playwright.ci.config.ts"
+          echo "Expected test count: 5 (ci-smoke.spec.ts only)"
+          echo "Running: npm run e2e:ci"
+          npm run e2e:ci || npm run e2e:ci-explicit
 
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
