--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:ui": "vitest --ui",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
-    "e2e:ci": "playwright test --config=playwright.ci.config.ts"
+    "e2e:ci": "playwright test --config=playwright.ci.config.ts",
+    "e2e:ci-explicit": "npx playwright test --config=./playwright.ci.config.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
