feat: enhance Playwright CI configuration and reporting
- Updated reporter to include HTML output for better visibility of test results.
- Changed base URL and web server port to avoid conflicts during CI runs.
- Added a step to check for the existence of the Playwright report directory in the CI workflow.
- Configured artifact upload to always include the Playwright report, even if tests fail.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,8 +84,22 @@ jobs:
           echo "Running: npm run e2e:ci"
           npm run e2e:ci || npm run e2e:ci-explicit
 
+      - name: Check Playwright Report
+        run: |
+          echo "=== Checking Playwright Report ==="
+          if [ -d "playwright-report" ]; then
+            echo "Playwright report directory found:"
+            ls -la playwright-report/
+          else
+            echo "No playwright-report directory found"
+            echo "Current directory contents:"
+            ls -la
+          fi
+
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
+        if: always() # Upload even if tests fail
         with:
           name: playwright-report
           path: playwright-report
+          if-no-files-found: warn # Warn instead of failing
