--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.87.4",
+    "@types/qrcode": "^1.5.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
